2020-03-10         [RELEASE] Release of filefill 3.1.0 (Nicole Cordes)
2020-03-10 5740bb0 [TASK] Add TYPO3 10.3 to extension constraints and Travis CI (Nicole Cordes)
2020-03-10 d56c3db [TASK] Update supporting files to EXT:my_skeleton 0.3.0 (Nicole Cordes)
2020-03-10 f6193aa [TASK] Use own form element for missing file infomation (Nicole Cordes)
2020-03-10 8f6f254 [TASK] Move file handling to driver (Nicole Cordes)
2020-03-05 b788f67 [FEATURE] Allow streaming of files (Nicole Cordes)

2020-03-05         [RELEASE] Release of filefill 3.0.3 (Nicole Cordes)
2020-03-05 2e4c06f [BUGFIX] Enforce lower file extension for comparison (Nicole Cordes)

2020-02-26         [RELEASE] Release of filefill 3.0.2 (Nicole Cordes)
2020-02-26 17c557d [BUGFIX] Use correct identifier canonicalization (Nicole Cordes)
2020-01-20 964c455 Add a better example (Harry Glatz)
2020-01-17 7f7dcd0 Remove duplicate entry in example (Harry Glatz)

2019-08-29         [RELEASE] Release of filefill 3.0.1 (Nicole Cordes)
2019-08-29 9e773f5 [BUGFIX] Do not try to download files not present in sys_file (Helmut Hummel)

2019-08-20         [RELEASE] Release of filefill 3.0.0 (Nicole Cordes)
2019-08-20 b62a18c [TASK] Update supporting files to EXT:my_skeleton 0.2.1 (Nicole Cordes)
2019-08-20 6bc9c0a [TASK] Update README.md (Nicole Cordes)
2019-04-28 a1eae59 [FEATURE] Allow global reprocessing of existing ProcessedFile (Nicole Cordes)
2019-04-28 25b5d27 [TASK] Streamline PlaceholderResource (Nicole Cordes)
2019-04-28 ed65f5f [BUGFIX] Remove deprecated argument in GeneralUtility::mkdir_deep (Nicole Cordes)
2019-04-28 96dd0d5 [FEATURE] Adjust existing resource handler to new configuration (Nicole Cordes)
2019-04-28 d95218c [FEATURE] Move resource configuration to $TYPO3_CONF_VARS (Nicole Cordes)
2019-04-28 e276780 [TASK] Raise extension version to 3.x (Nicole Cordes)

2018-10-29         [RELEASE] Release of filefill 2.0.1 (Nicole Cordes)