@@ -1,3 +1,14 @@
+2020-04-02         [RELEASE] Release of filefill 3.2.0 (Nicole Cordes)
+2020-03-28 f19bf2e [BUGFIX] Streamline url handling in DomainResource (Nicole Cordes)
+2020-03-22 6dad456 [BUGFIX] Use site configurations for sys_domain resource (Nicole Cordes)
+2020-03-19 2289af0 [BUGFIX] Call getFileInfoByIdentifier on original driver (Nicole Cordes)
+2020-03-18 6dfd829 [FEATURE] Add command to reset missing files (Nicole Cordes)
+2020-03-17 e049d1d [FEATURE] Add command to delete files (Nicole Cordes)
+2020-03-14 51c9f64 [FEATURE] Also delete processed files (Nicole Cordes)
+2020-03-14 385b1ff [FEATURE] Delete files fetched by a resource handler (Nicole Cordes)
+2020-03-13 7bcb2cd [FEATURE] Add functional tests (Nicole Cordes)
+2020-01-07 837e45d [TASK] Override also LocalDriver->getFileInfoByIdentifier() (Rémy DANIEL)
+
 2020-03-10         [RELEASE] Release of filefill 3.1.0 (Nicole Cordes)
 2020-03-10 5740bb0 [TASK] Add TYPO3 10.3 to extension constraints and Travis CI (Nicole Cordes)
 2020-03-10 d56c3db [TASK] Update supporting files to EXT:my_skeleton 0.3.0 (Nicole Cordes)
